@@ -14,6 +14,8 @@ mapContour <- function(longitude=seq(0, 1, length.out=nrow(z)),
                        ## axes=TRUE, frame.plot=axes,
                        col=par("fg"), lty=par("lty"), lwd=par("lwd"))
 {
+    if (!exists(".Last.projection") || .Last.projection()$proj == "")
+        stop("must create a map first, with mapPlot()\n")
     if ("data" %in% slotNames(longitude) && # handle e.g. 'topo' class
         3 == sum(c("longitude","latitude","z") %in% names(longitude@data))) {
         z <- longitude@data$z
@@ -39,6 +41,8 @@ mapLongitudeLatitudeXY <- function(longitude, latitude)
 {
     if (missing(longitude))
         stop("must give 'longitude' and possibly 'latitude'")
+    if (!exists(".Last.projection") || .Last.projection()$proj == "")
+        stop("must create a map first, with mapPlot()\n")
     if (!missing(longitude) && ("data" %in% slotNames(longitude))) {
         tmp <- longitude@data
         if (("longitude" %in% names(tmp)) && ("latitude" %in% names(tmp))) {
@@ -587,6 +591,8 @@ mapImage <- function(longitude, latitude, z, zlim, zclip=FALSE, breaks,
                      lwd=par("lwd"), lty=par("lty"),
                      filledContour=FALSE, missingColor=NA, debug=getOption("oceDebug"))
 {
+    if (!exists(".Last.projection") || .Last.projection()$proj == "")
+        stop("must create a map first, with mapPlot()\n")
     oceDebug(debug, "\b\bmapImage(..., ",
              " missingColor='", missingColor, "', ",
              " filledContour=", filledContour, ", ",
